crates/sui/tests/snapshots/shell_tests__summaries__summarize_json.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/summaries/summarize_json.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# Default output format is JSON
bfc move summary --path data/move_package
ls -1 data/move_package/package_summaries
ls -1 data/move_package/package_summaries/move_package
ls -1 data/move_package/package_summaries/sui
ls -1 data/move_package/package_summaries/std
# NB: Not root_package_metadata for source packages as these are not generated w.r.t. a specific network.
cat data/move_package/package_summaries/root_package_metadata.json
echo
# This will contain the address mapping for the package from the literal value
# of the address to the named value of the address (which is what the source
# package metadata uses for storage).
cat data/move_package/package_summaries/address_mapping.json

----- results -----
success: false
exit_code: 1
----- stdout -----
UPDATING GIT DEPENDENCY https://github.com/MystenLabs/sui.git
Failed to resolve dependencies for package 'move_package'

Caused by:
    0: Fetching 'BfcSystem'
    1: Failed to reset to latest Git state 'a4786abc9d4d' for package 'BfcSystem', to skip set --skip-fetch-latest-git-deps | Exit status: exit status: 128


----- stderr -----
致命错误：无法访问 'https://github.com/MystenLabs/sui.git/'：Failed to connect to github.com port 443 after 75003 ms: Couldn't connect to server
ls: data/move_package/package_summaries: No such file or directory
ls: data/move_package/package_summaries/move_package: No such file or directory
ls: data/move_package/package_summaries/sui: No such file or directory
ls: data/move_package/package_summaries/std: No such file or directory
cat: data/move_package/package_summaries/root_package_metadata.json: No such file or directory
cat: data/move_package/package_summaries/address_mapping.json: No such file or directory
