crates/sui/tests/snapshots/shell_tests__summaries__summarize_yaml.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/summaries/summarize_yaml.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

bfc move summary --path data/move_package -o yaml
ls -1 data/move_package/package_summaries
ls -1 data/move_package/package_summaries/move_package
ls -1 data/move_package/package_summaries/sui
ls -1 data/move_package/package_summaries/std
# NB: No root_package_metadata for source packages as these are not generated w.r.t. a specific network.
cat data/move_package/package_summaries/root_package_metadata.yaml
# This will contain the address mapping for the package from the literal value
# of the address to the named value of the address (which is what the source
# package metadata/move_package uses for storage).
cat data/move_package/package_summaries/address_mapping.yaml

----- results -----
success: false
exit_code: 1
----- stdout -----
Failed to resolve dependencies for package 'move_package'

Caused by:
    0: Parsing manifest for 'Sui'
    1: No such file or directory (os error 2)

----- stderr -----
[note] Dependencies on BfcSystem, Bridge, MoveStdlib, Sui, and SuiSystem are automatically added, but this feature is disabled for your package because you have explicitly included dependencies on Sui. Consider removing these dependencies from Move.toml.
ls: cannot access 'data/move_package/package_summaries': No such file or directory
ls: cannot access 'data/move_package/package_summaries/move_package': No such file or directory
ls: cannot access 'data/move_package/package_summaries/sui': No such file or directory
ls: cannot access 'data/move_package/package_summaries/std': No such file or directory
cat: data/move_package/package_summaries/root_package_metadata.yaml: No such file or directory
cat: data/move_package/package_summaries/address_mapping.yaml: No such file or directory
